--- a/thesis-info.tex
+++ b/thesis-info.tex
@@ -1,6 +1,6 @@
 % ************************ Thesis Information & Meta-data **********************
 %% The title of the thesis
-\title{DAIS Internship Manager}
+\title{\projectName}
 
 %% Subtitle (Optional)
 \subtitle{Portale per la gestione dei tirocini universitari}
