--- a/Preamble/preamble.tex
+++ b/Preamble/preamble.tex
@@ -52,7 +52,8 @@
 % ************************* Algorithms and Pseudocode **************************
 
 \usepackage{algpseudocode}
-
+\usepackage{listings}
+\lstset{language=C,keywordstyle={\bfseries \color{blue}}}
 
 % ********************Captions and Hyperreferencing / URL **********************
 
@@ -130,7 +131,6 @@
 % changes the default name `Bibliography` -> `References'
 \renewcommand{\bibname}{References}
 
-
 % ******************************************************************************
 % ************************* User Defined Commands ******************************
 % ******************************************************************************
@@ -154,47 +154,27 @@
 
 %\renewcommand{\nomname}{Symbols}
 
-
-% ********************************* Appendix ***********************************
-
-% The default value of both \appendixtocname and \appendixpagename is `Appendices'. These names can all be changed via:
-
-%\renewcommand{\appendixtocname}{List of appendices}
-%\renewcommand{\appendixname}{Appndx}
-
-% *********************** Configure Draft Mode **********************************
-
-% Uncomment to disable figures in `draft'
-%\setkeys{Gin}{draft=true}  % set draft to false to enable figures in `draft'
-
-% These options are active only during the draft mode
-% Default text is "Draft"
-%\SetDraftText{DRAFT}
-
-% Default Watermark location is top. Location (top/bottom)
-%\SetDraftWMPosition{bottom}
-
-% Draft Version - default is v1.0
-%\SetDraftVersion{v1.1}
-
-% Draft Text grayscale value (should be between 0-black and 1-white)
-% Default value is 0.75
-%\SetDraftGrayScale{0.8}
-
-
-% ******************************** Todo Notes **********************************
-%% Uncomment the following lines to have todonotes.
-
-%\ifsetDraft
-%	\usepackage[colorinlistoftodos]{todonotes}
-%	\newcommand{\mynote}[1]{\todo[author=kks32,size=\small,inline,color=green!40]{#1}}
-%\else
-%	\newcommand{\mynote}[1]{}
-%	\newcommand{\listoftodos}{}
-%\fi
-
-% Example todo: \mynote{Hey! I have a note}
-
 % *****************************************************************************
 % ******************* Better enumeration my MB*************
 \usepackage{enumitem}
+
+% *****************************************************************************
+% **************************** Custom commands ********************************
+\usepackage[toc,acronyms]{glossaries}
+\makeglossaries
+
+% Handle Glossary
+\usepackage{xparse}
+\DeclareDocumentCommand{\newdualentry}{ O{} O{} m m m m } {
+	\newglossaryentry{gls-#3}{name={#5},text={#5\glsadd{#3}},
+		description={#6},#1
+	}
+	\makeglossaries
+	\newacronym[see={[Glossario:]{gls-#3}},#2]{#3}{#4}{#5\glsadd{gls-#3}}
+}
+\loadglsentries{Glossary/glossary}
+
+% Add custom commands here
+\newcommand{\projectName}{\textit{DAIS Internship Manager}~}
+\newcommand{\nodejs}{\textit{Node.js} }
+
