Update Chapter 1 - wip

--- a/Glossary/glossary.tex
+++ b/Glossary/glossary.tex
@@ -7,3 +7,19 @@
 {NoSQL}            % abbreviation
 {NoSQL}  % long form
 {Archivi di dati che il più delle volte non richiedono uno schema fisso (schemaless), evitano spesso le operazioni di giunzione (join) e puntano a scalare in modo orizzontale} % description
+
+\newdualentry{eda}
+{EDA}
+{Event-driver architecture}
+{Un pattern di architettura software che promuove la produzione, l'individuazione, il consumo e la reazioni agli eventi}
+
+\newdualentry{eventloop}
+{Event-loop}
+{Event-loop}
+{Un costrutto di programmazione che attende e invia eventi o messaggi in un programma}
+
+
+\newdualentry{patternobserver}
+{Observer}
+{Observer pattern}
+{Un design pattern in cui un oggetto, chiamato \textit{subject}, mantiene un elenco dei suoi dipendenti, chiamati \textit{observers} e li notifica automaticamente di qualsiasi cambiamento di stato, di solito chiamando uno dei loro metodi}
