--- a/Preamble/preamble.tex
+++ b/Preamble/preamble.tex
@@ -176,5 +176,7 @@
 
 % Add custom commands here
 \newcommand{\projectName}{\textit{DAIS Internship Manager}~}
-\newcommand{\nodejs}{\textit{Node.js} }
-
+\newcommand{\nodejs}{\textit{Node.js}~}
+\newcommand{\expressjs}{\textit{Express.js}~}
+\newcommand{\mongodb}{\textit{MongoDD}~}
+\newcommand{\angular}{\textit{Angular}~}
