--- a/Preamble/preamble.tex
+++ b/Preamble/preamble.tex
@@ -53,7 +53,41 @@
 
 \usepackage{algpseudocode}
 \usepackage{listings}
-\lstset{language=C,keywordstyle={\bfseries \color{blue}}}
+\usepackage{color}
+\definecolor{lightgray}{rgb}{.9,.9,.9}
+\definecolor{darkgray}{rgb}{.4,.4,.4}
+\definecolor{purple}{rgb}{0.65, 0.12, 0.82}
+
+\lstdefinelanguage{JavaScript}{
+	keywords={typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, while, do, else, case, break, import, const, from},
+	keywordstyle=\color{blue}\bfseries,
+	ndkeywords={class, export, boolean, throw, implements, import, this},
+	ndkeywordstyle=\color{darkgray}\bfseries,
+	identifierstyle=\color{black},
+	sensitive=false,
+	comment=[l]{//},
+	morecomment=[s]{/*}{*/},
+	commentstyle=\color{purple}\ttfamily,
+	stringstyle=\color{red}\ttfamily,
+	morestring=[b]',
+	morestring=[b]"
+}
+
+\lstset{
+	language=JavaScript,
+	backgroundcolor=\color{lightgray},
+	extendedchars=true,
+	basicstyle=\footnotesize\ttfamily,
+	showstringspaces=false,
+	showspaces=false,
+	numbers=left,
+	numberstyle=\footnotesize,
+	numbersep=9pt,
+	tabsize=2,
+	breaklines=true,
+	showtabs=false,
+	captionpos=b
+}
 
 % ********************Captions and Hyperreferencing / URL **********************
 
@@ -176,7 +210,7 @@
 
 % Add custom commands here
 \newcommand{\projectName}{\textit{DAIS Internship Manager}~}
-\newcommand{\nodejs}{\textit{Node.js}~}
-\newcommand{\expressjs}{\textit{Express.js}~}
-\newcommand{\mongodb}{\textit{MongoDD}~}
-\newcommand{\angular}{\textit{Angular}~}
+\newcommand{\nodejs}{\textit{Node.js}}
+\newcommand{\expressjs}{\textit{Express.js}}
+\newcommand{\mongodb}{\textit{MongoDB}}
+\newcommand{\angular}{\textit{Angular}}
