--- a/thesis-info.tex
+++ b/thesis-info.tex
@@ -3,7 +3,7 @@
 \title{\projectName}
 
 %% Subtitle (Optional)
-\subtitle{Portale per la gestione dei tirocini universitari}
+\subtitle{Piattaforma per la gestione dei tirocini universitari}
 
 %% The full name of the author
 \author{Giacomo De Liberali}
@@ -26,8 +26,7 @@
 
 %% Supervisor (optional)
 %% for multiple supervisors, append each supervisor with the \newline command
-%\supervisor{Prof. A.B. Supervisor\newline
-%Prof. C.D. Supervisor}
+\supervisor{Filippo Bergamasco}
 
 %% Supervisor Role (optional) - Supervisor (default) or advisor
 % \supervisorrole{\textbf{Supervisors: }}
