--- a/thesis.tex
+++ b/thesis.tex
@@ -15,7 +15,7 @@
 
 \maketitle
 
-\include{Dedication/dedication}
+%\include{Dedication/dedication}
 \include{Abstract/abstract}
 
 % *********************** Adding TOC and List of Figures ***********************
