--- a/Preamble/preamble.tex
+++ b/Preamble/preamble.tex
@@ -166,6 +166,8 @@
 %\RequirePackage[backend=biber, style=numeric-comp, citestyle=numeric, sorting=nty, natbib=true]{biblatex}
 %\addbibresource{References/references} %Location of references.bib only for biblatex, Do not omit the .bib extension from the filename.
 
+\nocite{*}
+
 \fi
 
 % changes the default name `Bibliography` -> `References'
@@ -221,3 +223,4 @@
 \newcommand{\expressjs}{\textit{Express.js}}
 \newcommand{\mongodb}{\textit{MongoDB}}
 \newcommand{\angular}{\textit{Angular}}
+
