--- a/References/references.bib
+++ b/References/references.bib
@@ -14,3 +14,18 @@
 	urldate = {2018-05-05}
 }
 
+@online{mongodbcomparison,
+	author = {MongoDB Inc.},
+	title = {SQL to MongoDB Mapping Chart },
+	year = 2018,
+	url = {https://docs.mongodb.com/manual/reference/sql-comparison/},
+	urldate = {2018-05-07}
+}
+
+@online{mongodbarchitecture,
+	author = {MongoDB Inc.},
+	title = {MongoDB Architecture},
+	year = 2018,
+	url = {https://docs.mongodb.com/manual/reference/sql-comparison/},
+	urldate = {2018-05-07}
+}
