Fix typos Fix glossay entry

--- a/Glossary/glossary.tex
+++ b/Glossary/glossary.tex
@@ -151,6 +151,20 @@ Un pattern architetturale comunemente usato per lo sviluppo di software che divi
 }
 
 \newglossaryentry
+{typescript}
+{
+	name={
+		Typescript
+	},
+	text={
+		typescript
+	},
+	description={
+		Un linguaggio programmazione open-source sviluppato di Microsoft, super-set di \gls{javascript}, estende la sintassi di \gls{javascript} introducento lo static typing
+	}
+}
+
+\newglossaryentry
 {sqljoin}
 {
 name={
