--- a/References/references.bib
+++ b/References/references.bib
@@ -26,6 +26,6 @@
 	author = {MongoDB Inc.},
 	title = {MongoDB Architecture},
 	year = 2018,
-	url = {https://docs.mongodb.com/manual/reference/sql-comparison/},
+	url = {https://www.mongodb.com/mongodb-architecture},
 	urldate = {2018-05-07}
 }
