Update chapter 1 (angular - wip)

--- a/Glossary/glossary.tex
+++ b/Glossary/glossary.tex
@@ -60,10 +60,27 @@ Un pattern architetturale comunemente usato per lo sviluppo di software che divi
 {Una rappresentazione binaria di \gls{json}}
 
 
+\newdualentry{html}
+{HTML}
+{HyperText Markup Language}
+{Un linguaggio di markup per la formattazione e impaginazione di documenti ipertestuali disponibili nel web}
+
+\newdualentry{dom}
+{DOM}
+{Document Object Model}
+{Una forma di rappresentazione dei documenti strutturati come modello orientato agli oggetti. Nativamente supportato dai browser per modificare gli elementi di un documento \acrshort{html}, DOM è un modo per accedere e aggiornare dinamicamente il contenuto, la struttura e lo stile dei documenti.}
+
+
 \newdualentry{oop}
 {OOP}
 {Object-oriented programming}
 {Un paradigma di programmazione che permette di definire oggetti software in grado si interagire gli uni con gli altri attraverso uno scambio di messaggi}
+
+
+\newdualentry{di}
+{DI}
+{Dependency injection}
+{Un design pattern della programmazione orientata agli oggetti il cui scopo è quello di semplificare lo sviluppo e migliorare la testabilità di software di grandi dimensioni}
 
 % use with \gls{label}
 \newglossaryentry
