--- a/References/references.bib
+++ b/References/references.bib
@@ -29,3 +29,11 @@
 	url = {https://www.mongodb.com/mongodb-architecture},
 	urldate = {2018-05-07}
 }
+
+@online{angularoverview,
+	author = {Google},
+	title = {Angular - Architecture Overview},
+	year = 2018,
+	url = {https://angular.io/guide/architecture},
+	urldate = {2018-05-08}
+}
