Update server architecture in chapter 2

--- a/Glossary/glossary.tex
+++ b/Glossary/glossary.tex
@@ -82,6 +82,30 @@ Un pattern architetturale comunemente usato per lo sviluppo di software che divi
 {Dependency injection}
 {Un design pattern della programmazione orientata agli oggetti il cui scopo è quello di semplificare lo sviluppo e migliorare la testabilità di software di grandi dimensioni}
 
+\newdualentry{orm}
+{ORM}
+{Object-relational mapping}
+{Una tecnica di programmazione per convertire dati tra sistemi incompatibili utilizzando linguaggi \gls{oop}}
+
+
+\newdualentry{rest}
+{REST}
+{Representational State Transfer}
+{Un'architettura software per trasmettere dati su \acrshort{http} in modo statless}
+
+
+\newdualentry{npm}
+{npm}
+{Node Package Manager}
+{Un package manager per \gls{javascript}, è quello di default per il runtime di \nodejs}
+
+
+
+\newdualentry{crud}
+{CRUD}
+{Create, Read, Update e Delete}
+{Rappresentano le operazioni di base per un modello di memorizzazione permanente}
+
 % use with \gls{label}
 \newglossaryentry
 {framework}
