--- a/Preamble/preamble.tex
+++ b/Preamble/preamble.tex
@@ -56,18 +56,18 @@
 \usepackage{color}
 \definecolor{lightgray}{rgb}{.9,.9,.9}
 \definecolor{darkgray}{rgb}{.4,.4,.4}
-\definecolor{purple}{rgb}{0.65, 0.12, 0.82}
+\definecolor{green}{rgb}{0,0.55,0}
 
 \lstdefinelanguage{JavaScript}{
-	keywords={typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, while, do, else, case, break, import, const, from},
-	keywordstyle=\color{blue}\bfseries,
-	ndkeywords={class, export, boolean, throw, implements, import, this},
-	ndkeywordstyle=\color{darkgray}\bfseries,
+	keywords={typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, while, do, else, case, break},
+	keywordstyle=\color{blue},
+	ndkeywords={class, export, boolean, throw, implements, import, this from, const, extends, super, constructor, public, private, protected},
+	ndkeywordstyle=\color{blue},
 	identifierstyle=\color{black},
 	sensitive=false,
 	comment=[l]{//},
 	morecomment=[s]{/*}{*/},
-	commentstyle=\color{purple}\ttfamily,
+	commentstyle=\color{green}\ttfamily,
 	stringstyle=\color{red}\ttfamily,
 	morestring=[b]',
 	morestring=[b]"
@@ -86,8 +86,10 @@
 	tabsize=2,
 	breaklines=true,
 	showtabs=false,
-	captionpos=b
+	captionpos=b,
 }
+
+\usepackage{courier}
 
 % ********************Captions and Hyperreferencing / URL **********************
 
@@ -223,4 +225,5 @@
 \newcommand{\expressjs}{\textit{Express.js}}
 \newcommand{\mongodb}{\textit{MongoDB}}
 \newcommand{\angular}{\textit{Angular}}
+\newcommand{\mongoosejs}{\textit{Mongoose.js}}
 
