Update server architecture in chapter 2 Update client architecture in chapter 2

--- a/Preamble/preamble.tex
+++ b/Preamble/preamble.tex
@@ -61,7 +61,7 @@
 \lstdefinelanguage{JavaScript}{
 	keywords={typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, while, do, else, case, break},
 	keywordstyle=\color{blue},
-	ndkeywords={class, export, boolean, throw, implements, import, this from, const, extends, super, constructor, public, private, protected},
+	ndkeywords={class, export, boolean, throw, implements, import, this from, const, extends, super, constructor, public, private, protected, await, this},
 	ndkeywordstyle=\color{blue},
 	identifierstyle=\color{black},
 	sensitive=false,
