--- a/Preamble/preamble.tex
+++ b/Preamble/preamble.tex
@@ -113,7 +113,7 @@
 
 % Uncomment the following two lines to force Latex to place the figure.
 % Use [H] when including graphics. Note 'H' instead of 'h'
-%\usepackage{float}
+\usepackage{float}
 %\restylefloat{figure}
 
 % Subcaption package is also available in the sty folder you can use that by
