Update api authentication in chapter 4

--- a/Glossary/glossary.tex
+++ b/Glossary/glossary.tex
@@ -106,6 +106,11 @@ Un pattern architetturale comunemente usato per lo sviluppo di software che divi
 {Create, Read, Update e Delete}
 {Rappresentano le operazioni di base per un modello di memorizzazione permanente}
 
+
+\newdualentry{jwt}
+{JWT}
+{\acrshort{json} Web Token}
+{Un open-standard basato su \acrshort{json} per la creazione di token di accesso che contengono un certo numero di \textit{claims}}
 % use with \gls{label}
 \newglossaryentry
 {framework}
