Add screenshot to use cases Remove empty chapter 5

--- a/Preamble/preamble.tex
+++ b/Preamble/preamble.tex
@@ -59,7 +59,7 @@
 \definecolor{green}{rgb}{0,0.55,0}
 
 \lstdefinelanguage{JavaScript}{
-	keywords={typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, while, do, else, case, break},
+	keywords={typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, while, do, else, case, break, try, async},
 	keywordstyle=\color{blue},
 	ndkeywords={class, export, boolean, throw, implements, import, this from, const, extends, super, constructor, public, private, protected, await, this},
 	ndkeywordstyle=\color{blue},
