Fix BSON figure in chpater 1

--- a/thesis.tex
+++ b/thesis.tex
@@ -38,9 +38,7 @@
 \include{Chapter2/chapter2}
 \include{Chapter3/chapter3}
 \include{Chapter4/chapter4}
-% \include{Chapter5/chapter5}
-\include{Chapter6/chapter6}
-%\include{Chapter7/chapter7}
+\include{Chapter5/chapter5}
 
 
 % ********************************** Bibliography ******************************
@@ -63,6 +61,6 @@
 
 % *************************************** Index *******************************
 \glsaddall
-\printglossary[type=\acronymtype,title=Arconimi,toctitle=Termini ed abbreviazioni] % prints just the list of acronyms
+\printglossary[type=\acronymtype,title=Arconimi,toctitle=Acronimi] % prints just the list of acronyms
 \printglossary % if no option is supplied the default glossary is printed.
 \end{document}
