Fix typos in chapter 1

--- a/Glossary/glossary.tex
+++ b/Glossary/glossary.tex
@@ -107,6 +107,11 @@ Un pattern architetturale comunemente usato per lo sviluppo di software che divi
 {Rappresentano le operazioni di base per un modello di memorizzazione permanente}
 
 
+\newdualentry{spa}
+{SPA}
+{Single Page Application}
+{Un'applicazione web che può essere utilizzata su una singola pagina web con l'obiettivo di fornire una esperienza utente più fluida e simile alle applicazioni desktop dei sistemi operativi tradizionali}
+
 \newdualentry{jwt}
 {JWT}
 {\acrshort{json} Web Token}
