--- a/Preamble/preamble.tex
+++ b/Preamble/preamble.tex
@@ -220,10 +220,12 @@
 \loadglsentries{Glossary/glossary}
 
 % Add custom commands here
-\newcommand{\projectName}{\textit{DAIS Internship Manager}~}
+\newcommand{\projectName}{\textit{DAIS Internship Manager}}
 \newcommand{\nodejs}{\textit{Node.js}}
 \newcommand{\expressjs}{\textit{Express.js}}
 \newcommand{\mongodb}{\textit{MongoDB}}
 \newcommand{\angular}{\textit{Angular}}
 \newcommand{\mongoosejs}{\textit{Mongoose.js}}
+
+\renewcommand{\glstextformat}[1]{\textit{#1}}
 
