--- a/Glossary/glossary.tex
+++ b/Glossary/glossary.tex
@@ -183,7 +183,7 @@ Un pattern architetturale comunemente usato per lo sviluppo di software che divi
 		back-end
 	},
 	description={
-		Si intende la parte di applicazione non visibile all'utente finale che manipola, gestisce e fornsce i dati alla parte di \gls{frontend}
+		Si intende la parte di applicazione non visibile all'utente finale che manipola, gestisce e fornisce i dati alla parte di \gls{frontend}
 	}
 }
 
