Update abstract Update last chapter Fix flow diagrams

--- a/Glossary/glossary.tex
+++ b/Glossary/glossary.tex
@@ -91,7 +91,7 @@ Un pattern architetturale comunemente usato per lo sviluppo di software che divi
 \newdualentry{rest}
 {REST}
 {Representational State Transfer}
-{Un'architettura software per trasmettere dati su \acrshort{http} in modo statless}
+{Un'architettura software per trasmettere dati su \acrshort{http} in modo state-less}
 
 
 \newdualentry{npm}
