--- a/Abstract/abstract.tex
+++ b/Abstract/abstract.tex
@@ -1,5 +1,5 @@
 % ************************** Thesis Abstract *****************************
 % Use `abstract' as an option in the document class to print only the titlepage and the abstract.
 \begin{abstract}
-This is where you write your abstract ...
+\projectName~è un'applicazione web realizzata con lo scopo di agevolare la creazione, la ricerca e la gestione dei tirocini del dipartimento di Informatica, Scienze ambientali e Statistica (DAIS) sviluppata utilizzando tecnologie web-based su stack \gls{mean}.
 \end{abstract}
