Move images in correct folder Update controllers in chapter 4 Update references

--- a/Abstract/abstract.tex
+++ b/Abstract/abstract.tex
@@ -1,5 +1,7 @@
 % ************************** Thesis Abstract *****************************
 % Use `abstract' as an option in the document class to print only the titlepage and the abstract.
 \begin{abstract}
-\projectName~è un'applicazione web realizzata con lo scopo di agevolare la creazione, la ricerca e la gestione dei tirocini del dipartimento di Informatica, Scienze ambientali e Statistica (DAIS) sviluppata utilizzando tecnologie web-based su stack \gls{mean}.
+\projectName~è un'applicazione web realizzata con lo scopo di agevolare la creazione, la ricerca e la gestione dei tirocini del Dipartimento di Informatica, Scienze ambientali e Statistica (DAIS) sviluppata utilizzando tecnologie web-based su stack \gls{mean}. 
+
+Con questa piattaforma un'azienda sarà in grado di registrarsi e pubblicare un'offerta di tirocinio che, una volta approvata da un professore, verrà pubblicata e resta disponibile agli studenti. Gli studenti a loro volta potranno candidarsi alle offerte, scegliere un docente come referente per il percorso, completare il foglio presenze e infine stampare la documentazione in \textit{PDF} precompilata.
 \end{abstract}
