--- a/References/references.bib
+++ b/References/references.bib
@@ -3,7 +3,7 @@
 	title = {Node.js},
 	year = 2018,
 	url = {https://nodejs.org/it/},
-	urldate = {2018-05-05}
+	urldate = {2018-06-05}
 }
 
 @online{jseverywhere,
@@ -11,7 +11,7 @@
 	title = {Node.js - Wikipedia},
 	year = 2018,
 	url = {https://en.wikipedia.org/wiki/Node.js},
-	urldate = {2018-05-05}
+	urldate = {2018-06-05}
 }
 
 @online{mongodbcomparison,
@@ -19,7 +19,7 @@
 	title = {SQL to MongoDB Mapping Chart },
 	year = 2018,
 	url = {https://docs.mongodb.com/manual/reference/sql-comparison/},
-	urldate = {2018-05-07}
+	urldate = {2018-06-07}
 }
 
 @online{mongodbarchitecture,
@@ -27,7 +27,7 @@
 	title = {MongoDB Architecture},
 	year = 2018,
 	url = {https://www.mongodb.com/mongodb-architecture},
-	urldate = {2018-05-07}
+	urldate = {2018-06-07}
 }
 
 @online{angularoverview,
@@ -35,5 +35,38 @@
 	title = {Angular - Architecture Overview},
 	year = 2018,
 	url = {https://angular.io/guide/architecture},
-	urldate = {2018-05-08}
+	urldate = {2018-06-08}
+}
+
+@online{mongoose,
+	author = {Automattic},
+	title = {MongoDB object modeling designed to work in an asynchronous environment},
+	year = 2018,
+	url = {https://github.com/Automattic/mongoose},
+	urldate = {2018-06-16}
+}
+
+@online{ngxcore,
+	author = {Ngx-translate},
+	title = {The internationalization (i18n) library for Angular},
+	year = 2018,
+	url = {https://github.com/ngx-translate/core},
+	urldate = {2018-06-16}
+}
+
+@online{inversifyjs,
+	author = {Inversify},
+	title = {A powerful and lightweight inversion of control container for JavaScript and Node.js apps powered by TypeScript},
+	year = 2018,
+	url = {https://github.com/inversify/InversifyJS},
+	urldate = {2018-06-16}
+}
+
+
+@online{javascriptstatemachine,
+	author = {Jakesgordon},
+	title = {A javascript finite state machine library},
+	year = 2018,
+	url = {https://github.com/jakesgordon/javascript-state-machine},
+	urldate = {2018-06-16}
 }
