Add responsive design section in chapter 2 Add border to all images

--- a/Glossary/glossary.tex
+++ b/Glossary/glossary.tex
@@ -116,6 +116,12 @@ Un pattern architetturale comunemente usato per lo sviluppo di software che divi
 {JWT}
 {\acrshort{json} Web Token}
 {Un open-standard basato su \acrshort{json} per la creazione di token di accesso che contengono un certo numero di \textit{claims}}
+
+\newdualentry{css}
+{CSS}
+{Cascading Style Sheets}
+{Un linguaggio usato per definire la formattazione di documenti \acrshort{html}}
+
 % use with \gls{label}
 \newglossaryentry
 {framework}
